Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59268

Memory corruption related to QQmlTypeLoader

XMLWordPrintable

    • 5adfb4063a64aa3ae27269330c1fb8960dda4082

      There is a Qt memory corruption in QHashData::nextNode at next->next :

      1  QHashData::nextNode(QHashData::Node *)                                                                             qhash.cpp                 613  0x109c7241a    
      2  QHash<QString, QQmlDirParser::Component>::const_iterator::operator++()                                             qhash.h                   392  0x1024c0f8f    
      3  findCompositeSingletons(QQmlImportNamespace const&, QList<QQmlImports::CompositeSingletonReference>&, QUrl const&) qqmlimport.cpp            421  0x1024c0dbf    
      4  QQmlImports::resolvedCompositeSingletons() const                                                                   qqmlimport.cpp            439  0x1024c0ffc    
      5  QQmlTypeData::resolveTypes()                                                                                       qqmltypeloader.cpp        2326 0x10248458a    
      6  QQmlTypeData::allDependenciesDone()                                                                                qqmltypeloader.cpp        2270 0x1024840fa    
      7  QQmlTypeLoader::setData(QQmlDataBlob *, QQmlDataBlob::Data const&)                                                 qqmltypeloader.cpp        1218 0x10247c4a0    
      8  QQmlTypeLoader::setData(QQmlDataBlob *, QByteArray const&)                                                         qqmltypeloader.cpp        1197 0x10247bd8d    
      9  QQmlTypeLoader::networkReplyFinished(QNetworkReply *)                                                              qqmltypeloader.cpp        1143 0x102478a70    
      10 QQmlTypeLoaderNetworkReplyProxy::finished()                                                                        qqmltypeloader.cpp        181  0x102478742    
      11 QQmlTypeLoaderNetworkReplyProxy::qt_static_metacall(QObject *, QMetaObject::Call, int, void * *)                   qqmltypeloader.moc        78   0x102487ab3    
      12 QMetaObject::activate(QObject *, int, int, void * *)                                                               qobject.cpp               3740 0x109ec2b2e    
      13 QMetaObject::activate(QObject *, QMetaObject const *, int, void * *)                                               qobject.cpp               3602 0x109ec1fdd    
      14 QNetworkReply::finished()                                                                                          moc_qnetworkreply.cpp     368  0x10993b405    
      15 QNetworkReply::qt_static_metacall(QObject *, QMetaObject::Call, int, void * *)                                     moc_qnetworkreply.cpp     217  0x10993ae94    
      16 QMetaCallEvent::placeMetaCall(QObject *)                                                                           qobject.cpp               502  0x109eb747a    
      17 QObject::event(QEvent *)                                                                                           qobject.cpp               1263 0x109eb9448    
      18 QApplicationPrivate::notify_helper(QObject *, QEvent *)                                                            qapplication.cpp          3799 0x107db745f    
      19 QApplication::notify(QObject *, QEvent *)                                                                          qapplication.cpp          3159 0x107db95e7    
      20 QCoreApplication::notifyInternal2(QObject *, QEvent *)                                                             qcoreapplication.cpp      988  0x109e6ce35    
      21 QCoreApplication::sendEvent(QObject *, QEvent *)                                                                   qcoreapplication.h        231  0x109e6e748    
      22 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *)                                           qcoreapplication.cpp      1649 0x109e6e5bd    
      23 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                         qeventdispatcher_unix.cpp 466  0x109f07bfc    
      24 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                   qeventloop.cpp            134  0x109e67ba4    
      25 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                                            qeventloop.cpp            212  0x109e67dbb    
      26 QThread::exec()                                                                                                    qthread.cpp               507  0x109ba2353    
      27 QQmlThreadPrivate::run()                                                                                           qqmlthread.cpp            147  0x102503cf8    
      28 QThreadPrivate::start(void *)                                                                                      qthread_unix.cpp          368  0x109bac00f    
      29 _pthread_body                                                                                                                                     0x7fffcdc04aab 
      30 _pthread_start                                                                                                                                    0x7fffcdc049f7 
      31 thread_start                                                                                                                                      0x7fffcdc041fd 
      

        For Gerrit Dashboard: QTBUG-59268
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            erb Jason Erb (Suitable Technologies)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes