Fix QQmlTypeLoader::Blob::qmldirDataAvailable memory overwrite

An invalid iterator was being dereferenced.

Task-number: QTBUG-59268
Change-Id: I58635667ab4591c06f1d7644243b83fd0172e74f
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>